--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(Makefile.am)
+dnl AC_REVISION($Revision: $)dnl
+dnl AM_MAINTAINER_MODE
+AC_INIT(source/typen.h)
 
 AM_CONFIG_HEADER(config.h)
-
-AM_INIT_AUTOMAKE(asc,1.2.0)
+AM_INIT_AUTOMAKE(asc,1.9.5)
 
 dnl *************************************************************************
 dnl Checks for programs.
@@ -109,13 +110,18 @@ fi
 
 dnl *************************************************************************
 dnl Checks for header files.
+dnl
+AC_HEADER_STDC
+AC_CHECK_HEADERS(sys/time.h time.h errno.h fcntl.h signal.h stdio.h stdlib.h \
+		sys/stat.h sys/uio.h unistd.h sys/wait.h sys/un.h \
+		sys/ioctl.h sys/filio.h pthread.h sys/sysctl.h \
+		sys/dirent.h )
+AC_CHECK_HEADERS(string.h strings.h, break)
 
-dnl Checks for some STL header files (which aren't available for gcc at the time of writing).
+dnl Checks for some STL header files (which aren't available for gcc 2.95.3 ).
 AC_CHECK_HEADERS( exception limits )
 
 dnl Checks for other header files.
-AC_HEADER_STDC
-AC_CHECK_HEADERS(malloc.h strings.h sys/dirent.h)
 AC_HEADER_DIRENT
 AC_HEADER_TIME
 
@@ -124,9 +130,15 @@ AC_DEFINE_UNQUOTED( GAME_DATADIR, "$game_datadir")
 
 dnl *************************************************************************
 dnl Checks for typedefs, structures, and compiler characteristics.
+dnl 
+dnl We use our own AC_UNP_CHECK_TYPE macro, instead of AC_CHECK_TYPE,
+dnl to #include more headers.  Our macro is defined in "aclocal.m4".
+dnl
 AC_C_CONST
 AC_TYPE_SIZE_T
+AC_HEADER_TIME
 
+dnl *************************************************************************
 dnl Checks for library functions.
 AC_CHECK_FUNCS(select)
 AC_CHECK_FUNCS(itoa)
@@ -136,6 +148,7 @@ dnl c++ tests
 AC_LANG_CPLUSPLUS
 
 dnl GCC 2.95.3 came with a broken standard library
+
 AC_MSG_CHECKING("broken std::string compare")
 AC_TRY_COMPILE( [#include <string>], [
       std::string s = "Hello World";
@@ -188,12 +201,6 @@ http://www.asc-hq.org/download_updates.html
 fi
 
 
-AC_TRY_COMPILE( [#include <string>], [
-   std::basic_string<wchar_t> test;
-   test.c_str();
-],, Unicode_broken=yes)
-
-
 dnl what gehts packed into main.con (the data container file) and in which
 dnl order
 
@@ -229,6 +236,7 @@ bkgr4.scr helpsys9.msg *.wav *.msg *.gif"
 dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
 
+
 dnl for libtool to work LTLIBOJS is needed (currently bug of autoconf)
 Xsed="sed -e s/^X//"
 LTLIBOBJS=`echo X"$LIBOBJS"|[$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
@@ -243,6 +251,9 @@ AC_OUTPUT( Makefile source/Makefile source/docs/Makefile \
            source/libs/triangul/Makefile source/libs/Makefile \
            source/ai/Makefile source/unix/Makefile \
            source/unix/mapeditor/Makefile source/tools/Makefile \
-           source/tools/linux/Makefile data/Makefile doc/Makefile )
+	   source/tools/lib/Makefile \
+           source/tools/linux/Makefile data/Makefile doc/Makefile
+	 )
+
 
 
