--- a/source/tools/Makefile.am
+++ b/source/tools/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.4 2001-12-14 10:20:06 mbickel Exp $
+## $Id: Makefile.am,v 1.5 2001-12-19 11:46:36 mbickel Exp $
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS			= linux
+SUBDIRS			= lib linux
