--- a/config.h.in
+++ b/config.h.in
@@ -14,6 +14,8 @@
 
 #undef GAME_DATADIR
 
+#undef USE_SYSTEM_BZ2
+
 /* Define if you have the itoa function.  */
 #undef HAVE_ITOA
 
@@ -26,14 +28,8 @@
 /* Define if you have the <dirent.h> header file.  */
 #undef HAVE_DIRENT_H
 
-/* Define if you have the <errno.h> header file.  */
-#undef HAVE_ERRNO_H
-
 /* Define if you have the <exception> header file.  */
 #undef HAVE_EXCEPTION
-
-/* Define if you have the <fcntl.h> header file.  */
-#undef HAVE_FCNTL_H
 
 /* Define if you have the <limits> header file.  */
 #undef HAVE_LIMITS
@@ -41,71 +37,17 @@
 /* Define if you have the <ndir.h> header file.  */
 #undef HAVE_NDIR_H
 
-/* Define if you have the <pthread.h> header file.  */
-#undef HAVE_PTHREAD_H
-
-/* Define if you have the <signal.h> header file.  */
-#undef HAVE_SIGNAL_H
-
-/* Define if you have the <stdio.h> header file.  */
-#undef HAVE_STDIO_H
-
-/* Define if you have the <stdlib.h> header file.  */
-#undef HAVE_STDLIB_H
-
-/* Define if you have the <string.h> header file.  */
-#undef HAVE_STRING_H
-
-/* Define if you have the <strings.h> header file.  */
-#undef HAVE_STRINGS_H
-
 /* Define if you have the <sys/dir.h> header file.  */
 #undef HAVE_SYS_DIR_H
 
-/* Define if you have the <sys/dirent.h> header file.  */
-#undef HAVE_SYS_DIRENT_H
-
-/* Define if you have the <sys/filio.h> header file.  */
-#undef HAVE_SYS_FILIO_H
-
-/* Define if you have the <sys/ioctl.h> header file.  */
-#undef HAVE_SYS_IOCTL_H
-
 /* Define if you have the <sys/ndir.h> header file.  */
 #undef HAVE_SYS_NDIR_H
-
-/* Define if you have the <sys/stat.h> header file.  */
-#undef HAVE_SYS_STAT_H
-
-/* Define if you have the <sys/sysctl.h> header file.  */
-#undef HAVE_SYS_SYSCTL_H
-
-/* Define if you have the <sys/time.h> header file.  */
-#undef HAVE_SYS_TIME_H
-
-/* Define if you have the <sys/uio.h> header file.  */
-#undef HAVE_SYS_UIO_H
-
-/* Define if you have the <sys/un.h> header file.  */
-#undef HAVE_SYS_UN_H
-
-/* Define if you have the <sys/wait.h> header file.  */
-#undef HAVE_SYS_WAIT_H
-
-/* Define if you have the <time.h> header file.  */
-#undef HAVE_TIME_H
-
-/* Define if you have the <unistd.h> header file.  */
-#undef HAVE_UNISTD_H
 
 /* Define if you have the SDL_image library (-lSDL_image).  */
 #undef HAVE_LIBSDL_IMAGE
 
 /* Define if you have the SDL_mixer library (-lSDL_mixer).  */
 #undef HAVE_LIBSDL_MIXER
-
-/* Define if you have the bz2 library (-lbz2).  */
-#undef HAVE_LIBBZ2
 
 /* Name of package */
 #undef PACKAGE
