--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.51 $)dnl
+dnl AC_REVISION($Revision: 1.52 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -11,15 +11,16 @@ dnl Checks for programs.
 dnl
 AC_PROG_CC
 AC_PROG_CXX
+
 dnl AC_PROG_RANLIB
 AM_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
-
 dnl mikem: doesn't like this stuff - ugly right away
 CFLAGS="$CFLAGS -D_UNIX_ -D_SDL_"
-dnl -D_NOASM_"
+
 CXXFLAGS="$CXXFLAGS -Wno-sign-compare -funsigned-char -D_UNIX_ -D_SDL_"
+
 dnl -DHEXAGON -D_NOASM_
 dnl here comes the special stuff - done on demand (developers only?)
 AC_ARG_ENABLE( docbook2man, [  --enable-docbook2man    will build the man pages from the sgml source files.], SGML2MAN=manpages )
@@ -52,6 +53,7 @@ SAVE_CXXFLAGS=$CXXFLAGS
 SAVE_CFLAGS=$CFLAGS
 SAVE_LIBS=$LIBS
 
+
 dnl check for libSDL
 SDL_VERSION=1.1.3
 AM_PATH_SDL($SDL_VERSION,
@@ -78,6 +80,12 @@ AC_LANG_CPLUSPLUS
 
 AM_PATH_SDLMM(0.1.8, :, AC_MSG_ERROR([*** SDLmm version 0.1.8 not found! Get it from http://sdlmm.sf.net ]))
 
+AM_PATH_PARAGUI(1.0.0,
+            :,
+            AC_MSG_ERROR([*** PARAGUI version 1.0.0 not found!])
+)
+
+echo Paragui CFLAGS are $PARAGUI_CFLAGS
 
 AC_LANG_RESTORE
 
@@ -87,11 +95,10 @@ CFLAGS=$SAVE_CFLAGS
 LIBS=$SAVE_LIBS
 
 
-
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
 lib_bz2_static=no
 AC_ARG_ENABLE( libbz2-static, [ --enable-libbz2-static  compiles a static libbz2 into the binary of asc.], [lib_bz2_static=$enableval], [lib_bz2_usecache=yes] )
-AC_CHECK_LIB( bz2, BZ2_bzReadOpen,, [checklib_bz2_static=yes] )
+AC_CHECK_LIB( bz2, BZ2_bzReadOpen, :, [checklib_bz2_static=yes] )
 AC_CACHE_CHECK( [for static libbz2 flag state], [ac_cv_lib_bz2_static], [ ac_cv_lib_bz2_static=$lib_bz2_static ] )
 
 dnl ac_cv_lib_bz2_static holds cached flag state, checklib_bz2... holds check
@@ -112,19 +119,18 @@ if test "x$lib_bz2_static" = "xyes"; then
   LDADDLIBBZ2=\${top_builddir}/source/libs/bzlib/libbz2.a;
 else 
   LDADDLIBBZ2=-lbz2
+  AC_DEFINE_UNQUOTED( USE_SYSTEM_BZ2, 1 )
 fi
-
 
 
 dnl *************************************************************************
 dnl Checks for header files.
 dnl
-AC_HEADER_STDC
-AC_CHECK_HEADERS(sys/time.h time.h errno.h fcntl.h signal.h stdio.h stdlib.h \
-		sys/stat.h sys/uio.h unistd.h sys/wait.h sys/un.h \
-		sys/ioctl.h sys/filio.h pthread.h sys/sysctl.h \
-		sys/dirent.h )
-AC_CHECK_HEADERS(string.h strings.h, break)
+
+dnl Martin: Why should we need this ?
+dnl AC_HEADER_STDC
+dnl AC_CHECK_HEADERS(sys/time.h time.h errno.h fcntl.h signal.h stdio.h stdlib.h sys/stat.h sys/uio.h unistd.h sys/wait.h sys/un.h sys/ioctl.h sys/filio.h pthread.h sys/sysctl.h sys/dirent.h )
+dnl AC_CHECK_HEADERS(string.h strings.h, break)
 
 dnl Checks for some STL header files (which aren't available for gcc 2.95.3 ).
 AC_CHECK_HEADERS( exception limits )
