--- a/source/tools/linux/Makefile.am
+++ b/source/tools/linux/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.24 2001-12-19 11:46:36 mbickel Exp $
+## $Id: Makefile.am,v 1.25 2002-02-14 20:58:14 mbickel Exp $
 
 vpath %.cpp ..:../..
 
@@ -26,18 +26,12 @@ asc_viewid_SOURCES      = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp l
 asc_bin2text_SOURCES    = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
 asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
 
-asc_mount_LDADD     = @SDL_LIBS@ @SDLMM_LIBS@ -lpthread @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
-asc_demount_LDADD   = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
-asc_makegfx_LDADD    = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
-asc_viewid_LDADD     = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
-asc_bin2text_LDADD   = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
-asc_weaponguide_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ \
-$(top_builddir)/source/tools/lib/libasc_cmd.la 
+asc_mount_LDADD     = @SDL_LIBS@ @SDLMM_LIBS@ -lpthread @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_demount_LDADD   = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_makegfx_LDADD    = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_viewid_LDADD     = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_bin2text_LDADD   = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
+asc_weaponguide_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
 
 # vim: noexpandtab ai
 
