--- a/source/libs/bzlib/makefile.msc
+++ b/source/libs/bzlib/makefile.msc
@@ -4,7 +4,7 @@
 # Fixed up by JRS for bzip2-0.9.5d release.
 
 CC=cl
-CFLAGS= -DWIN32 -MD -Ox -D_FILE_OFFSET_BITS=64
+CFLAGS= -DWIN32 -MD -Ox -D_FILE_OFFSET_BITS=64 -nologo
 
 OBJS= blocksort.obj  \
       huffman.obj    \
@@ -21,7 +21,6 @@ bzip2: lib
 	$(CC) $(CFLAGS) -o bzip2recover bzip2recover.c
 
 lib: $(OBJS)
-	del libbz2.lib
 	lib /out:libbz2.lib $(OBJS)
 
 test: bzip2
@@ -32,20 +31,19 @@ test: bzip2
 	.\\bzip2 -d  < sample1.bz2 > sample1.tst
 	.\\bzip2 -d  < sample2.bz2 > sample2.tst
 	.\\bzip2 -ds < sample3.bz2 > sample3.tst
+	@echo All six of the fc's should find no differences.
+	@echo If fc finds an error on sample3.bz2, this could be
+	@echo because WinZip's 'TAR file smart CR/LF conversion'
+	@echo is too clever for its own good.  Disable this option.
+	@echo The correct size for sample3.ref is 120,244.  If it
+	@echo is 150,251, WinZip has messed it up.
 	fc sample1.bz2 sample1.rb2 
 	fc sample2.bz2 sample2.rb2
 	fc sample3.bz2 sample3.rb2
 	fc sample1.tst sample1.ref
 	fc sample2.tst sample2.ref
 	fc sample3.tst sample3.ref
-	@echo All six of the fc's should find no differences.
-	@echo If fc finds an error on sample3.tst, this could be
-	@echo because WinZips 'TAR file smart CR/LF conversion'
-	@echo is too clever for its own good.  Disable this option.
-	@echo The correct size for sample3.ref is 120,244.  If it
-	@echo is around 150k, WinZip has stuffed it up.
-	@echo Also remember to set BZ_UNIX to 0 and BZ_LCCWIN32
-	@echo to 1 in bzip2.c.
+
 
 
 clean: 
