Updated build system to warn about missing music  Updated build system to insert version information automatically  edgen.cpp compiles with gcc 3.0.4 again

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS 		= dialog
+SUBDIRS 		= dialog @MUSICDIR@
 
 MAINTAINERCLEANFILES    = Makefile.in
 # main.con buildings.con mk1.con trrobj.con trrobj2.con
