--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,14 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.56 $)dnl
+dnl AC_REVISION($Revision: 1.57 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
+dnl extracting the version number from the source code
+dnl (it has to be stored there to be accessible by the windows build too)
+asc_version=`cat source/strtmesg.cpp | awk -F\" '/asc_release=/{print \$2}' | sed 's/ASC//g'`
+
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(asc,1.9.5)
+AM_INIT_AUTOMAKE(asc,$asc_version)
 
 dnl *************************************************************************
 dnl Checks for programs.
@@ -281,6 +285,18 @@ bkgr4.scr helpsys9.msg *.wav *.msg *.gif *.asctxt"
 dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
 
+AC_MSG_CHECKING("music files")
+missingmusic=`checkfordata.pl data/music/frontiers.mp3 data/music/time_to_strike.mp3`
+if test "x$missingmusic" = x ; then
+  AC_MSG_RESULT("yes")
+  MUSICDIR=music
+else
+  AC_MSG_RESULT("no")
+fi
+
+AC_SUBST([MUSICDIR])
+
+
 
 dnl for libtool to work LTLIBOJS is needed (currently bug of autoconf)
 Xsed="sed -e s/^X//"
@@ -297,7 +313,21 @@ AC_OUTPUT( Makefile source/Makefile source/docs/Makefile \
       source/ai/Makefile source/unix/Makefile \
       source/unix/mapeditor/Makefile source/tools/Makefile \
 	   source/tools/lib/Makefile source/tools/linux/Makefile \
-	   data/Makefile data/dialog/Makefile doc/Makefile
+	   data/Makefile data/dialog/Makefile data/music/Makefile \
+	   doc/Makefile
 	 )
 
 	
+if test "x$missingmusic" != x ; then
+  AC_MSG_WARN( [ 
+The following music files could not be found: $missingmusic .
+The music files are not distributed together with the source code because 
+of their size. ASC can run without the music files being present, this message
+is just to inform you about the existence of the music.
+
+You can download the music files by calling the ./getmusic script and 
+run configure again, which will properly install them.
+Alternatively, you can download and install them manually anytime later, 
+which is described in the documentation.
+] )
+fi
