--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.58 $)dnl
+dnl AC_REVISION($Revision: 1.59 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -234,7 +234,7 @@ dnl *************************************************************************
 dnl Checking and assembling the data files
 
 AC_MSG_CHECKING("data files")
-missingdata=`checkfordata.pl data/buildings.con data/mk1.con data/trrobj.con data/trrobj2.con`
+missingdata=`./checkfordata.pl data/buildings.con data/mk1.con data/trrobj.con data/trrobj2.con`
 if test "x$missingdata" = x ; then
   AC_MSG_RESULT("yes")
 else
@@ -287,7 +287,7 @@ dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
 
 AC_MSG_CHECKING("music files")
-missingmusic=`checkfordata.pl data/music/frontiers.mp3 data/music/time_to_strike.mp3`
+missingmusic=`./checkfordata.pl data/music/frontiers.mp3 data/music/time_to_strike.mp3`
 if test "x$missingmusic" = x ; then
   AC_MSG_RESULT("yes")
   MUSICDIR=music
