--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.59 $)dnl
+dnl AC_REVISION($Revision: 1.60 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -31,7 +31,7 @@ if test "X$gcc296test" = "Xyes"; then
 **** To build ASC, we recommend either GCC 2.95 or GCC 3.0
 **** You can bypass this test with --disable-gcc296-detection, so you can build
 **** ASC and see for yourself. And perhaps even rewrite some parts of ASC to
-**** make them Redhat compatible ;-) ])
+**** make them Redhat compatible ;) ])
       fi
    fi
 fi
