--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.60 $)dnl
+dnl AC_REVISION($Revision: 1.61 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -84,7 +84,7 @@ dnl check for libSDL
 SDL_VERSION=1.1.3
 AM_PATH_SDL($SDL_VERSION,
             :,
-            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
+            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found! If you have some SDL.RPM installed, perhaps the SDL-devel.RPM is missing.])
 )
 
 dnl set up new FLAGS
@@ -114,7 +114,7 @@ AM_PATH_SDLMM(0.1.8, :, AC_MSG_ERROR([*** SDLmm version 0.1.8 not found! Get it 
 
 AM_PATH_PARAGUI(1.0.1,
             :,
-            AC_MSG_ERROR([*** PARAGUI version 1.0.0 not found!])
+            AC_MSG_ERROR([*** PARAGUI version 1.0.1 not found!])
 )
 
 dnl echo Paragui CFLAGS are $PARAGUI_CFLAGS
