--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.61 $)dnl
+dnl AC_REVISION($Revision: 1.62 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -84,15 +84,14 @@ dnl check for libSDL
 SDL_VERSION=1.1.3
 AM_PATH_SDL($SDL_VERSION,
             :,
-            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found! If you have some SDL.RPM installed, perhaps the SDL-devel.RPM is missing.])
-)
+            AC_MSG_ERROR(*** SDL version $SDL_VERSION not found! If you have a distribution suplied SDL.RPM installed, perhaps the SDL-devel.RPM is missing. ))
 
 dnl set up new FLAGS
 CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
 CFLAGS="$CFLAGS $SDL_CFLAGS"
 LIBS="$LIBS $SDL_LIBS"
 
-AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,,  AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ), )
+AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,,AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ) )
 AC_CHECK_LIB( SDL_mixer, Mix_PlayChannelTimed,, AC_MSG_ERROR( ASC requires the SDL_mixer library. You can get it at www.libsdl.org ) )
 
 dnl How do we add $SDL_FLAGS to the CFLAGS so gcc finds these headers ?
@@ -300,9 +299,9 @@ AC_SUBST([MUSICDIR])
 
 
 dnl for libtool to work LTLIBOJS is needed (currently bug of autoconf)
-Xsed="sed -e s/^X//"
-LTLIBOBJS=`echo X"$LIBOBJS"|[$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
-AC_SUBST(LTLIBOBJS)
+dnl Xsed="sed -e s/^X//"
+dnl LTLIBOBJS=`echo X"$LIBOBJS"|[$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
+dnl AC_SUBST(LTLIBOBJS)
 
 AC_OUTPUT( Makefile source/Makefile source/docs/Makefile \
 	   source/docs/en/Makefile source/sdl/Makefile \
