--- a/config.h.in
+++ b/config.h.in
@@ -1,17 +1,7 @@
 /* config.h.in.  Generated from configure.in by autoheader.  */
-/* Define if the C++ compiler supports BOOL */
-#undef HAVE_BOOL
 
-#undef VERSION
-
-#undef PACKAGE
-
-/* Define if you need the GNU extensions to compile */
-#undef _GNU_SOURCE
-
+/* The directory in which the data files are going to be installed */
 #undef GAME_DATADIR
-
-#undef USE_SYSTEM_BZ2
 
 /* Define to 1 if you have the <dirent.h> header file, and it defines `DIR'.
    */
@@ -102,6 +92,9 @@
 
 /* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME
+
+/* link against libbzip2 */
+#undef USE_SYSTEM_BZ2
 
 /* Version number of package */
 #undef VERSION
