--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS 		= dialog @MUSICDIR@
 MAINTAINERCLEANFILES    = Makefile.in
 # main.con buildings.con mk1.con trrobj.con trrobj2.con
 
-pkgdata_DATA 		= main.con buildings.con mk1.con trrobj.con trrobj2.con
+pkgdata_DATA 		= main.con buildings.con mk1.con trrobj.con trrobj2.con asc.gfx
 
 pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
