Fixed duplicate Makefiles in configure.in

--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.65 $)dnl
+dnl AC_REVISION($Revision: 1.66 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -297,16 +297,26 @@ AC_SUBST([MUSICDIR])
 
 
 
-AC_OUTPUT( Makefile source/Makefile source/docs/Makefile \
-	   source/docs/en/Makefile source/sdl/Makefile \
-	   source/libs/triangul/Makefile source/libs/Makefile \
-	   source/ai/Makefile source/unix/Makefile doc/manpages/Makefile \
-      source/Makefile source/clparser/Makefile \
-      source/unix/mapeditor/Makefile source/tools/Makefile \
-	   source/tools/lib/Makefile source/tools/linux/Makefile \
-	   data/Makefile data/dialog/Makefile data/music/Makefile \
-	   doc/Makefile asc.spec
-	 )
+AC_OUTPUT( Makefile \
+           asc.spec \
+	   doc/Makefile \
+           doc/manpages/Makefile \
+           source/Makefile \
+	   source/ai/Makefile \
+           source/clparser/Makefile \
+           source/docs/Makefile \
+	   source/docs/en/Makefile \
+           source/libs/Makefile \
+	   source/libs/triangul/Makefile \
+           source/sdl/Makefile \
+           source/tools/Makefile \
+	   source/tools/lib/Makefile \
+           source/tools/linux/Makefile \
+           source/unix/Makefile \
+           source/unix/mapeditor/Makefile \
+	   data/Makefile \
+           data/dialog/Makefile \
+           data/music/Makefile  )
 
 	
 if test "x$missingmusic" != x ; then
