--- a/source/ai/Makefile.am
+++ b/source/ai/Makefile.am
@@ -1,7 +1,7 @@
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-CXXFLAGS		= @CXXFLAGS@ @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+AM_CXXFLAGS		= @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
 
 noinst_LTLIBRARIES 	= libai.la
 
