--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl AC_REVISION($Revision: 1.68 $)dnl
+dnl AC_REVISION($Revision: 1.69 $)dnl
 dnl AM_MAINTAINER_MODE
 AC_INIT(source/typen.h)
 
@@ -22,18 +22,19 @@ AC_PROG_CC
 AC_PROG_CXX
 
 
+
 gcc296test=yes
 AC_ARG_ENABLE( gcc296-detection, [  --disable-gcc296-detection  Do not perform gcc 2.96 detection test .], gcc296test=no )
-if test "X$gcc296test" = "Xyes"; then
-   if test "$GCC" = yes; then
-      gcc_version=`gcc --version`
+if test "$GCC" = yes; then
+   gcc_version=`gcc --version`
+   if test "X$gcc296test" = "Xyes"; then
       gcc_version296=`echo $gcc_version | grep 2.96`
       if test "X$gcc_version296" != "X"; then
          AC_MSG_ERROR([
 **** GCC $gcc_version detected. This version of gcc is not an official release
 **** and does produce incorrect code. You may try to build ASC, but it will
 **** most likely NOT run.
-**** To build ASC, we recommend either GCC 2.95 or GCC 3.0
+**** To build ASC, we recommend either GCC 2.95 or GCC 3
 **** You can bypass this test with --disable-gcc296-detection, so you can build
 **** ASC and see for yourself. And perhaps even rewrite some parts of ASC to
 **** make them Redhat compatible ;) ])
@@ -41,7 +42,17 @@ if test "X$gcc296test" = "Xyes"; then
    fi
 fi
 
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
 
+
+AC_CHECK_HEADERS( bitset,, 
+                  AC_MSG_ERROR( [[
+Header <bitset> not found. This is probably caused by having an outdated 
+C++ compiler / standard library. Please upgrade to a compiler that is 
+ISO/IEC 14882 conformant (for example gcc 3.2) ]]))
+
+AC_LANG_RESTORE
 
 
 dnl mikem: doesn't like this stuff - ugly right away
@@ -84,17 +95,33 @@ SAVE_LIBS=$LIBS
 
 dnl check for libSDL
 SDL_VERSION=1.1.3
-AM_PATH_SDL($SDL_VERSION,
-            :,
-            AC_MSG_ERROR(*** SDL version $SDL_VERSION not found! If you have a distribution suplied SDL.RPM installed, perhaps the SDL-devel.RPM is missing. ))
+AM_PATH_SDL($SDL_VERSION,:,
+            AC_MSG_ERROR([[
+*** SDL version $SDL_VERSION not found! If you have a distribution supplied 
+SDL.RPM installed, perhaps the SDL-devel.RPM is missing. If your distribution 
+does not include the SDL library, you can get it from http://www.libsdl.org/ ]]))
 
 dnl set up new FLAGS
 CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"
 CFLAGS="$CFLAGS $SDL_CFLAGS"
 LIBS="$LIBS $SDL_LIBS"
 
-AC_CHECK_LIB( SDL_image, IMG_LoadJPG_RW,,AC_MSG_ERROR( ASC requires the SDL_image library. You can get it at www.libsdl.org ) )
-AC_CHECK_LIB( SDL_mixer, Mix_PlayChannelTimed,, AC_MSG_ERROR( ASC requires the SDL_mixer library. You can get it at www.libsdl.org ) )
+AC_CHECK_LIB( SDL_image, 
+              IMG_LoadJPG_RW,,
+	      AC_MSG_ERROR([[ 
+ASC requires the SDL_image library. If you have a distribution supplied 
+SDL_image.RPM installed, perhaps the SDL_image-devel.RPM is missing. 
+If your distribution does not include the SDL_image library, you can get it 
+from http://www.libsdl.org/projects/SDL_image/ ]]))
+
+
+AC_CHECK_LIB( SDL_mixer, 
+              Mix_PlayChannelTimed,, 
+	      AC_MSG_ERROR( [[
+ASC requires the SDL_mixer library. If you have a distribution supplied 
+SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing. 
+If your distribution does not include the SDL_image library, you can get it 
+from http://www.libsdl.org/projects/SDL_mixer/ ]]))
 
 dnl How do we add $SDL_FLAGS to the CFLAGS so gcc finds these headers ?
 dnl
@@ -102,21 +129,24 @@ dnl AC_CHECK_HEADERS( SDL_image.h,, AC_MSG_ERROR( ASC requires the development f
 dnl AC_CHECK_HEADERS( SDL_mixer.h,, AC_MSG_ERROR( ASC requires the development files for the SDL_mixer library. You can get the complete library at www.libsdl.org ))
 
 
-dnl AM_PATH_SMPEG(0.4.3, :, AC_MSG_ERROR([*** SMPEG version 0.4.3 not found! Get it from http://www.lokigames.com/development/smpeg.php3 ]))
-dnl CXXFLAGS="$CXXFLAGS $SMPEG_CFLAGS"
-dnl CFLAGS="$CFLAGS $SMPEG_CFLAGS"
-dnl LIBS="$LIBS $SMPEG_LIBS"
-
 dnl ugly work around for this yet buggy SDLmm check
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 
-AM_PATH_SDLMM(0.1.8, :, AC_MSG_ERROR([*** SDLmm version 0.1.8 not found! Get it from http://sdlmm.sf.net ]))
+AM_PATH_SDLMM(0.1.8, :, 
+              AC_MSG_ERROR([[
+*** SDLmm not found! ASC requires the SDLmm library. If you have a distribution
+supplied SDLmm.RPM installed, perhaps the SDLmm-devel.RPM is missing. 
+If your distribution does not include the SDLmm library, you can get it 
+from http://sdlmm.sf.net ]]))
 
 AM_PATH_PARAGUI(1.0.1,
             :,
-            AC_MSG_ERROR([*** PARAGUI version 1.0.1 not found!])
-)
+            AC_MSG_ERROR([[
+*** PARAGUI version 1.0.1 not found! ASC requires the Paragui library. 
+If you have a distribution supplied Paragui.RPM installed, perhaps the 
+Paragui-devel.RPM is missing. If your distribution does not include the 
+Paragui library, you can get it from http://www.paragui.org/ ]]))
 
 dnl echo Paragui CFLAGS are $PARAGUI_CFLAGS
 
@@ -160,10 +190,6 @@ dnl *************************************************************************
 dnl Checks for header files.
 dnl
 
-dnl Martin: Why should we need this ?
-dnl AC_HEADER_STDC
-dnl AC_CHECK_HEADERS(sys/time.h time.h errno.h fcntl.h signal.h stdio.h stdlib.h sys/stat.h sys/uio.h unistd.h sys/wait.h sys/un.h sys/ioctl.h sys/filio.h pthread.h sys/sysctl.h sys/dirent.h )
-dnl AC_CHECK_HEADERS(string.h strings.h, break)
 
 dnl Checks for some STL header files (which aren't available for gcc 2.95.3 ).
 AC_CHECK_HEADERS( exception limits )
