--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -125,11 +125,11 @@ bin_PROGRAMS = asc_demount \
 
 asc_demount_SOURCES = demount.cpp      basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp stringtokenizer.cpp
 asc_mount_SOURCES = mount.cpp        basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp stringtokenizer.cpp
-asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
-asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
-asc_raw2pcx_SOURCES = raw2pcx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
+asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
+asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
+asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
+asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp itemrepository.cpp
+asc_raw2pcx_SOURCES = raw2pcx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp containerbasetype.cpp terraintype.cpp objecttype.cpp textfiletags.cpp textfile_evaluation.cpp stringtokenizer.cpp
 
 asc_mount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ -lpthread @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
 asc_demount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@ $(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -155,9 +155,10 @@ am_asc_bin2text_OBJECTS = bin2text.$(OBJEXT) basestrm.$(OBJEXT) \
 	PropertyGroup.$(OBJEXT) stack.$(OBJEXT) buildingtype.$(OBJEXT) \
 	typen.$(OBJEXT) vehicletype.$(OBJEXT) password.$(OBJEXT) \
 	strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
-	textfiletags.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
-	stringtokenizer.$(OBJEXT) itemrepository.$(OBJEXT)
+	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
+	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
+	itemrepository.$(OBJEXT)
 asc_bin2text_OBJECTS = $(am_asc_bin2text_OBJECTS)
 asc_bin2text_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -177,9 +178,9 @@ am_asc_makegfx_OBJECTS = makegfx.$(OBJEXT) basestrm.$(OBJEXT) \
 	PropertyGroup.$(OBJEXT) stack.$(OBJEXT) buildingtype.$(OBJEXT) \
 	typen.$(OBJEXT) vehicletype.$(OBJEXT) password.$(OBJEXT) \
 	strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
-	textfiletags.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
-	stringtokenizer.$(OBJEXT)
+	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
+	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT)
 asc_makegfx_OBJECTS = $(am_asc_makegfx_OBJECTS)
 asc_makegfx_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -198,9 +199,9 @@ am_asc_raw2pcx_OBJECTS = raw2pcx.$(OBJEXT) basestrm.$(OBJEXT) \
 	PropertyGroup.$(OBJEXT) stack.$(OBJEXT) buildingtype.$(OBJEXT) \
 	typen.$(OBJEXT) vehicletype.$(OBJEXT) password.$(OBJEXT) \
 	strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
-	textfiletags.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
-	stringtokenizer.$(OBJEXT)
+	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
+	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT)
 asc_raw2pcx_OBJECTS = $(am_asc_raw2pcx_OBJECTS)
 asc_raw2pcx_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -213,9 +214,10 @@ am_asc_viewid_OBJECTS = viewid.$(OBJEXT) basestrm.$(OBJEXT) \
 	PropertyGroup.$(OBJEXT) stack.$(OBJEXT) buildingtype.$(OBJEXT) \
 	typen.$(OBJEXT) vehicletype.$(OBJEXT) password.$(OBJEXT) \
 	strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
-	textfiletags.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
-	stringtokenizer.$(OBJEXT) itemrepository.$(OBJEXT)
+	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
+	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
+	itemrepository.$(OBJEXT)
 asc_viewid_OBJECTS = $(am_asc_viewid_OBJECTS)
 asc_viewid_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -228,9 +230,10 @@ am_asc_weaponguide_OBJECTS = weaponguide.$(OBJEXT) basestrm.$(OBJEXT) \
 	PropertyGroup.$(OBJEXT) stack.$(OBJEXT) buildingtype.$(OBJEXT) \
 	typen.$(OBJEXT) vehicletype.$(OBJEXT) password.$(OBJEXT) \
 	strtmesg.$(OBJEXT) textfileparser.$(OBJEXT) \
-	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
-	textfiletags.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
-	stringtokenizer.$(OBJEXT) itemrepository.$(OBJEXT)
+	containerbasetype.$(OBJEXT) terraintype.$(OBJEXT) \
+	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
+	textfile_evaluation.$(OBJEXT) stringtokenizer.$(OBJEXT) \
+	itemrepository.$(OBJEXT)
 asc_weaponguide_OBJECTS = $(am_asc_weaponguide_OBJECTS)
 asc_weaponguide_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/tools/lib/libasc_cmd.la
@@ -248,8 +251,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/PropertyGroup.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/ascstring.Po ./$(DEPDIR)/basegfx.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/basestrm.Po ./$(DEPDIR)/bin2text.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/buildingtype.Po ./$(DEPDIR)/demount.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/gameoptions.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/buildingtype.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/containerbasetype.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/demount.Po ./$(DEPDIR)/gameoptions.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/graphicset.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/itemrepository.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/loadpcxc.Po ./$(DEPDIR)/makegfx.Po \
@@ -355,6 +359,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/basestrm.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bin2text.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/buildingtype.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/containerbasetype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/demount.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameoptions.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphicset.Po@am__quote@
