--- a/data/music/Makefile.in
+++ b/data/music/Makefile.in
@@ -104,7 +104,7 @@ am__quote = @am__quote@
 asc_version = @asc_version@
 install_sh = @install_sh@
 
-pkgdata_DATA = frontiers.mp3 time_to_strike.mp3
+pkgdata_DATA = frontiers.mp3 time_to_strike.mp3 machine_wars.mp3
 subdir = data/music
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
