Some updates to the build system for FreeBSD

--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -1,7 +1,8 @@
 
 MAINTAINERCLEANFILES	= Makefile.in
 
-AM_CXXFLAGS		= @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+AM_CXXFLAGS = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+AM_CFLAGS   = @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
 
 noinst_LTLIBRARIES	= libsdl.la
 
