--- a/configure.in
+++ b/configure.in
@@ -149,7 +149,7 @@ If your distribution does not include the SDLmm library, you can get it
 from http://sdlmm.sf.net ]]))
 
 
-AC_ARG_ENABLE( paragui, [  --disable-paragui  Don't use paragui .], useparagui=no )
+AC_ARG_ENABLE( paragui, [  --disable-paragui       Don't use paragui .], useparagui=no )
 
 
 
@@ -161,7 +161,10 @@ if test "x$useparagui" != "xno"; then
    *** PARAGUI version 1.0.1 not found! ASC requires the Paragui library.
    If you have a distribution supplied Paragui.RPM installed, perhaps the
    Paragui-devel.RPM is missing. If your distribution does not include the
-   Paragui library, you can get it from http://www.paragui.org/ ]]))
+   Paragui library, you can get it from http://www.paragui.org/
+   Alternatively, you can add "--disable-paragui" to "configure" to build
+   ASC without Paragui. Some not-so-important dialogs will be missing, but
+   you will be able to play ASC ]]))
 
    dnl echo Paragui CFLAGS are $PARAGUI_CFLAGS
 else
@@ -180,7 +183,7 @@ LIBS=$SAVE_LIBS
 
 dnl libbz2 stuff (should have a versionnr about 1.0.0)
 lib_bz2_static=no
-AC_ARG_ENABLE( libbz2-static, [  --enable-libbz2-static  compiles a static libbz2 into the binary of asc.], [lib_bz2_static=$enableval], [lib_bz2_usecache=yes] )
+AC_ARG_ENABLE( libbz2-static, [  --enable-libbz2-static      compiles a static libbz2 into the binary of asc.], [lib_bz2_static=$enableval], [lib_bz2_usecache=yes] )
 AC_CHECK_LIB( bz2, BZ2_bzReadOpen, :, [checklib_bz2_static=yes] )
 AC_CACHE_CHECK( [for static libbz2 flag state], [ac_cv_lib_bz2_static], [ ac_cv_lib_bz2_static=$lib_bz2_static ] )
 
@@ -383,7 +386,7 @@ AC_OUTPUT(  Makefile \
 	    data/dialog/Makefile \
 	    data/music/Makefile  )
 
-AC_ARG_ENABLE( debug, [  --enable-debug       enables some debugging options], ENABLEDEBUG=1 )
+AC_ARG_ENABLE( debug, [  --enable-debug          enables some debugging options and output], ENABLEDEBUG=1 )
 if test "X$ENABLEDEBUG" = "X1"; then
    CXXFLAGS="$CXXFLAGS -g3"
    echo SDL_CFLAGS $SDL_CFLAGS
@@ -410,3 +413,10 @@ Alternatively, you can download and install them manually anytime later,
 which is described in the documentation.
 ] )
 fi
+
+
+AC_MSG_NOTICE( [ configure completed successfully. Now run "make" do build ASC.
+If the build process fails for any reason, take a look at
+http://asc-hq.sourceforge.net/show.php?ID=58
+] )
+
